--- a/jio_kg_optimized_llm.ipynb
+++ b/jio_kg_optimized_llm.ipynb
@@ -35,12 +35,12 @@
       },
       "outputs": [],
       "source": [
-        "os.environ[\"GROQ_API_KEY\"] = \"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\" # Provide GROQ API Key\n",
+        "os.environ[\"GROQ_API_KEY\"] = \"\" # Provide GROQ API Key\n",
         "\n",
         "# Neo4j\n",
-        "neo4j_url = \"neo4j+s://f95622f0.databases.neo4j.io\" # Provide neo4j link\n",
+        "neo4j_url = \"\" # Provide neo4j link\n",
         "neo4j_user = \"neo4j\" # Provide neo4j user\n",
-        "neo4j_password = \"n9YghKN17YtYUnv5zpauZpkC1Z6ScAwK1JXugPDKTy0\" # Provide neo4j Password\n",
+        "neo4j_password = \"\" # Provide neo4j Password\n",
         "graph = Neo4jGraph(neo4j_url,neo4j_user,neo4j_password)\n",
         "\n",
         "from neo4j import GraphDatabase\n",
